fix transform on safari.

--- a/theme/default/carousel-3d.css
+++ b/theme/default/carousel-3d.css
@@ -45,4 +45,6 @@
 }
 [data-child-content] {
     transform-origin: 0px 0px;
+    -moz-transform-origin: 0px 0px;
+    -webkit-transform-origin: 0px 0px;
 }
